2008-05-14  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* tasque.mdp: F5 == make run

	Patch courtesy of Eric Butler  <eric@extremeboredom.net>:

	* src/Application.cs: Use Gtk.StatusIcon instead of Egg.TrayIcon.
	* src/Backends/Rtm/RtmPreferencesWidget.cs, configure.ac: Require
	  gtk-sharp >= 2.10.
	* src/Makefile.am, src/TrayLib.cs: Remove unused file.

2008-05-12  Brian Merrell <bgmerrell@gmail.com>

	* src/PreferencesDialog.cs:  Removed some of my old, commented out
	code.
	* src/TaskWindow.cs:  Organize the status bar messages when syncing
	with a backend.  They should make more sense now.

2008-05-12  Lucas Rocha <lucasr@gnome.org>

	* po/POTFILES.in: added missing files for translation.

2008-05-09  Brian Merrell <bgmerrell@gmail.com>

	* src/NoteDialog.cs:  Added public CreateNewNote method to use when
	when creating new notes.
	* src/TaskWindow.cs:  Call CreateNewNote to put the user into "Edit
	Note" mode when they open notes w/ 0 current notes.  Also added an
	accessible description for the category selection combo box.

2008-04-15  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Logger.cs: Rename log from .banter.log to .tasque.log.

2008-04-09  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac: Fix typo in configure.ac. Fixes bug #525272.
	Also use PKG_PROG_PKG_CONFIG instead of AC_PATH_PROG for checking
	for pkg-config.

2008-04-07  Sebastian Dröge  <slomo@circular-chaos.org>

	* src/Makefile.am:
	* src/Tasque.exe.config: Add dllmaps for libX11 and GDK.
	Fixes bug #526663.

2008-03-29  Johnny Jacob  <jjohnny@novell.com>

	* src/Backends/EDS/EDSTask.cs: Handle TaskState in 
	Constructor.

2008-03-28  Johnny Jacob  <jjohnny@novell.com>	

	* src/Backends/EDS/EDSBackends.cs : Fixed CreateTask. Moving 
	out of event model :( .
	
2008-03-28  Johnny Jacob  <jjohnny@novell.com>

	* tasque.mdp: Added EDS Backend into mdp.

2008-03-14  Boyd Timothy <btimothy@gmail.com> 
